solved issue with search test